--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 
 thor-tea-cooler-pio/data/hwConfig.json
 thor-tea-cooler-pio/data/hardwareConfig.json
+thor-tea-cooler-pio/data/networkConfig.json
+thor-tea-cooler-pio/thor-tea-cooler-pio.code-workspace
