Request Field validators
- implementation for request body field validators

--- a/thor-tea-cooler-pio/platformio.ini
+++ b/thor-tea-cooler-pio/platformio.ini
@@ -17,4 +17,5 @@ lib_deps =
 	paulstoffregen/OneWire@^2.3.7
 	milesburton/DallasTemperature@^3.11.0
 	bblanchon/ArduinoJson@^6.21.3
+	aharshac/StringSplitter@^1.0.0
 monitor_speed = 115200
